# portfolio-webpage

./: .gitignore  LICENSE
docs/: API_CONTRACTS.md  BACKEND_REFERENCE.md  CODE_STYLE_GIT_WORKFLOW.md  DATABASE_REFERENCE.md  DATABASE_SCHEMA_REFERENCE.md  DEPLOYMENT_ARCHITECTURE.md  FRONTEND_PAGES_CONTENT_GUIDE.md  (+1 more)
portfolio-api/: .coverage  .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  run_migrations.py
portfolio-api/app/: __init__.py  deps.py  exceptions.py  main.py
portfolio-api/app/api/v1/: __init__.py  contact.py  content.py  events.py  health.py  links.py  profile.py  radar.py  router.py  youtube.py
portfolio-api/app/core/: config.py  logging.py  security.py
portfolio-api/app/models/: schemas.py
portfolio-api/app/services/: content_service.py  email_service.py  links_service.py  profile_service.py  radar_service.py  rate_limit_service.py  supabase_service.py  youtube_service.py
portfolio-api/migrations/: 20260101000001_initial_schema.sql  20260101000002_rls_policies.sql  20260201000001_v2_embeddings.sql  20260705000001_profile.sql  20260705000002_external_links.sql  20260705000003_tags.sql  20260705000004_content_series.sql  20260705000005_content_items.sql  20260705000006_content_tags.sql  20260705000007_content_media.sql  20260705000008_tech_radar.sql  20260705000009_youtube_videos.sql  20260705000010_extend_messages.sql  20260705000011_extend_events.sql  20260705000012_admin_users.sql  seed_data.sql
portfolio-api/tests/: conftest.py  test_contact.py  test_health.py  test_rate_limit.py
(+51 files in other folders)
